--- a/index.html
+++ b/index.html
@@ -4,11 +4,53 @@
 	<title>Data Structures and Algorithms in Javascript</title>
 	<script type="text/javascript" src="data_structures_and_algorithms.js"></script>
 	<link href='http://fonts.googleapis.com/css?family=Roboto:400,100italic,300,300italic,100,400italic' rel='stylesheet' type='text/css'>
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body style="font-family: 'Roboto';">
-<h1>Learning JavaScript Data Structures and Algorithms</h1>
+<h1><a href="https://www.safaribooksonline.com/library/view/learning-javascript-data/9781783554874/" target="_blank">Learning JavaScript Data Structures and Algorithms</a></h1>
 
 <h2>Ch.1 Javascript Overview</h2>
+
+<table>
+	<thead>
+
+		<tr>
+			<th>Value type</th>
+			<th>Result</th>
+		</tr>
+
+	</thead>
+
+	<tbody>
+
+		<tr>
+			<td>undefined</td>
+			<td>false</td>
+		</tr>
+
+		<tr>
+			<td>null</td>
+			<td>false</td>
+		</tr>
+		<tr>
+			<td>Boolean</td>
+			<td>true is true, false is false!</td>
+		</tr>
+		<tr>
+			<td>Number</td>
+			<td>the result is false for +0, -0 or NaN; otherwise, the result is true</td>
+		</tr>
+		<tr>
+			<td>String</td>
+			<td>The result is false if the string is empty (length is 0), or true otherwise</td>
+		</tr>
+		<tr>
+			<td>Object</td>
+			<td>true</td>
+		</tr>
+	</tbody>
+</table>
+
 <h2>Ch.2 Arrays</h2>
 <h2>Ch.3 Stacks</h2>
 <h2>Ch.4 Queues</h2>
