fix some syntax issues

--- a/index.html
+++ b/index.html
@@ -243,6 +243,8 @@
 
 <div>
 	<h2>Ch.2 Arrays</h2>
+
+	<p>An array is the simplest memory data structure. For this reason, all programming languages have a built-in array data type</p>
 </div>
 
 <h2>Ch.3 Stacks</h2>
