array methods and definitions

--- a/index.html
+++ b/index.html
@@ -376,6 +376,83 @@
 
 	<p>It does not matter how many dimensions we have in the data structurel we need to loop each dimension to access the cell; We can represent a 3 X 3 X 3 matrix with a cube diagram</p>
 
+	<hr>
+	<h3>References for JS array methods</h3>
+	<p>Arrays in JS are modified objects, meaning that every array that we create has a few methods available to be used</p>
+	<p>This means that we do not need to write basic capabilities ourselves, such as adding and removing elements in/from the middle of the data structure</p>
+	<table>
+		<thead>
+			<th>Method</th>
+			<th>Description</th>
+		</thead>
+		<tbody>
+			<tr>
+				<td><strong>concat</strong></td>
+				<td>Joins multiple arrays and returns a copy of the joined arrays</td>
+			</tr>
+			<tr>
+				<td><strong>every</strong></td>
+				<td>calls a function for every element of the array until <strong>false</strong> is returned</td>
+			</tr>
+			<tr>
+				<td><strong>filter</strong></td>
+				<td>creates an array with each element that evaluates to <strong>true</strong> in the function provided</td>
+			</tr>
+			<tr>
+				<td><strong>forEach</strong></td>
+				<td>executes a specific function on each element of the array</td>
+			</tr>
+			<tr>
+				<td><strong>join</strong></td>
+				<td>joins all the array elements into a string</td>
+			</tr>
+			<tr>
+				<td><strong>indexOf</strong></td>
+				<td>searches the array for specific elements and returns its position</td>
+			</tr>
+			<tr>
+				<td><strong>lastIndexOf</strong></td>
+				<td>returns the last item in the array that matches the search criteria and returns its position</td>
+			</tr>
+			<tr>
+				<td><strong>map</strong></td>
+				<td>creates a new array with the result of calling the specified function on each element of the array</td>
+			</tr>
+			<tr>
+				<td><strong>reverse</strong></td>
+				<td>reverses the array so the last items become the first and vice versa</td>
+			</tr>
+			<tr>
+				<td><strong>slice</strong></td>
+				<td>returns a new array from the specified index</td>
+			</tr>
+			<tr>
+				<td><strong>some</strong></td>
+				<td>passes each element through the supplied function until <strong>true </strong>is returned</td>
+			</tr>
+			<tr>
+				<td><strong>sort</strong></td>
+				<td>sorts the array alphabetically or by the supplied function</td>
+			</tr>
+			<tr>
+				<td><strong>toString</strong></td>
+				<td>returns the array as a string</td>
+			</tr>
+			<tr>
+				<td><strong>valueOf</strong></td>
+				<td>Like the method <strong>toString</strong>, this returns the array as a string</td>
+			</tr>
+			<tr>
+				<td><strong>push | pop</strong></td>
+				<td>see above</td>
+			</tr>
+			<tr>
+				<td><strong>shift | unshift</strong></td>
+				<td>see above</td>
+			</tr>
+		</tbody>
+	</table>
+
 </div>
 
 <h2>Ch.3 Stacks</h2>
