--- a/index.html
+++ b/index.html
@@ -380,6 +380,7 @@
 	<h3>References for JS array methods</h3>
 	<p>Arrays in JS are modified objects, meaning that every array that we create has a few methods available to be used</p>
 	<p>This means that we do not need to write basic capabilities ourselves, such as adding and removing elements in/from the middle of the data structure</p>
+
 	<table>
 		<thead>
 			<th>Method</th>
@@ -453,16 +454,120 @@
 		</tbody>
 	</table>
 
+	<h3>Iterator functions for arrays</h3>
+	
+	<p>return true if the number is a multiple of 2(even) and false otherwise</p>
+	<code><pre>
+	var numbers = [1,2,3,4,5,6,7,8,9,10,11,12,13,14,15];
+	var isEven = function(x) {
+		// returns true if x is a multiple of 2
+		console.log(x);
+		return (x % 2 == 0) ? true : false;
+	}
+
+	// return (x%2 == 0) ? true : false; can also be represented as 
+	// return (x%2 == 0)
+	</pre></code>
+
+	<p><strong>every</strong> looks until false</p>
+	<p><strong>some</strong> looks until true</p>
+	<p><strong>forEach</strong> looks through everything!</p>
+	<p>forEach has the same result as using a <strong>for</strong> loop with the function's code inside it</p>
+
+	<h4>js also has two? other iterator methods that return a new array with a result</h4>
+	<ol>
+		<li>the first one is the <strong>map</strong> method;<br>
+		<code><pre>
+		var myMap = numbers.map(isEven);
+		</pre></code>
+		</li>
+		<li>the second one is the <strong>filter</strong> method; it returns a new array with the elements that the function returned <strong>true</strong><br>
+			<code><pre>
+			var evenNumberes = numbers.filter(isEven);
+			</pre></code>
+		</li>
+		<li>finally, we have the <strong>reduce</strong> method; the reduce method also receives a function with the following parameters: <strong>previousValue</strong>, <strong>currentValue</strong>, <strong>index</strong>, and <strong>array</strong><br>We can use this function to return a value that will be added to an accumulator, which is going to be returned after the <strong>reduce</strong> method stops being executed
+			<code><pre>
+			numbers.reduce(function(previous, current, index){
+				return previous + current;
+			});
+			</pre></code>
+		</li>
+	</ol>
+
+	<h4>other js methods of note</h4>
+	<p> reverse(), sort()</p>
+	<code><pre>
+		numbers.sort(function(a-b){
+			return a-b;
+		});
+	</pre></code>
+	<p>the above code will return a negative number if b is bigger than a, a positive number if a is bigger than b, and zero if they are equal</p>
+
+	<p>this can also be expressed as: </p>
+	<code><pre>
+		function compare(a,b) {
+			if (a < b) {
+				return -1;
+			}
+			if (a > b) {
+				return 1;
+			}
+			// a must be equal to be
+			return 0;
+		}
+			</pre></code>
+
+			<h4>Custom sorting</h4>
+			<p>we can sort an array with any type of object in it</p>
+			<p>we can also create a <strong>compareFunction</strong> to compare the elements as we need to. for example: </p>
+
+			<code><pre>
+		var friends = [
+			{name: 'John', age: 30},
+			{name: 'Ana', age: 20},
+			{name: 'Chris', age: 25}
+		];
+
+		function comparePerson(a, b) {
+			if (a.age < b.age) {
+				return -1;
+			}
+			if (a.age > b.age) {
+				return 1;
+			}
+			return 0;
+		}
+
+		console.log(friends.sort(comparePerson));
+			</pre></code>
+
+			<p> remember that js compares each character according to its ASCII value</p>
+			<p>use <strong>toLowerCase()</strong> to make code ignore case of letter</p>
+
+			<h4>Searching</h4>
+			<p><strong>indexOf </strong> and <strong>lastIndexOf</strong></p>
+
+			<code><pre>
+				console.log(numbers.indexOf(10)); // yields 9
+				console.log(numbers.indexOf(100)); // yields -1, because 100 is not in our array
+			</pre></code>
 </div>
 
-<h2>Ch.3 Stacks</h2>
-<h2>Ch.4 Queues</h2>
-<h2>Ch.5 Linked Lists</h2>
-<h2>Ch.6 Sets</h2>
-<h2>Ch.7 Dictionaries and Hashes</h2>
-<h2>Ch.8 Trees</h2>
-<h2>Ch.9 Graphs</h2>
-<h2>Ch.10 Sorting and Searching Algorithms</h2>
-<h2>Ch.11 More about Algorithms, Big O Notation</h2>
+<div>
+	<h2>Ch.3 Stacks</h2>
+	<p>Stacks are <strong>LIFO, last in first out</strong></p>
+</div>
+<div>
+	<h2>Ch.4 Queues</h2>
+	<h2>Ch.5 Linked Lists</h2>
+	<h2>Ch.6 Sets</h2>
+	<h2>Ch.7 Dictionaries and Hashes</h2>
+	<h2>Ch.8 Trees</h2>
+	<h2>Ch.9 Graphs</h2>
+	<h2>Ch.10 Sorting and Searching Algorithms</h2>
+	<h2>Ch.11 More about Algorithms, Big O Notation</h2>
+</div>
+
 </body>
 </html>
