--- a/index.html
+++ b/index.html
@@ -557,6 +557,9 @@
 <div>
 	<h2>Ch.3 Stacks</h2>
 	<p>Stacks are <strong>LIFO, last in first out</strong></p>
+
+	<h3>decimal to binary</h3>
+	<p>to convert a decimal number to a binary representation, we can divide the number by 2 (binary is base 2 number system) until the division result is 0. The remainders are the number in binary</p>
 </div>
 <div>
 	<h2>Ch.4 Queues</h2>
